<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14F1808" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="BYZ-38-t0r">
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="H73-Zm-dgh"/>
                        <viewControllerLayoutGuide type="bottom" id="ghS-jE-FKx"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CmT-2g-IVZ">
                                <rect key="frame" x="0.0" y="25" width="414" height="44"/>
                                <items>
                                    <barButtonItem systemItem="trash" id="IP4-EQ-EqH">
                                        <color key="tintColor" red="1" green="0.1587190329" blue="0.13959553520000001" alpha="1" colorSpace="calibratedRGB"/>
                                        <connections>
                                            <action selector="deleteTasks:" destination="BYZ-38-t0r" id="dwZ-NB-1RH"/>
                                        </connections>
                                    </barButtonItem>
                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="Eyr-zT-apv"/>
                                    <barButtonItem title="Clear" width="18" id="SXv-nd-pvq">
                                        <connections>
                                            <action selector="clearTasks:" destination="BYZ-38-t0r" id="IJy-MQ-NJ4"/>
                                        </connections>
                                    </barButtonItem>
                                </items>
                                <color key="barTintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                            </toolbar>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="kNf-tQ-Z8O">
                                <rect key="frame" x="0.0" y="110" width="414" height="667"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <connections>
                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="6bV-CL-K9w"/>
                                </connections>
                            </tableView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="To-do List" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y1x-Ys-0sh">
                                <rect key="frame" x="57" y="25" width="300" height="44"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" red="0.9408045196" green="0.97956699039999995" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter tasks here" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Ptz-od-oZT">
                                <rect key="frame" x="10" y="75" width="345" height="30"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bh0-Qq-dHN">
                                <rect key="frame" x="360" y="75" width="46" height="30"/>
                                <state key="normal" title="Insert"/>
                                <connections>
                                    <action selector="insertTasks:" destination="BYZ-38-t0r" eventType="touchUpInside" id="fgv-6F-Vnx"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                    </view>
                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
                    <connections>
                        <outlet property="clearButton" destination="SXv-nd-pvq" id="ASi-wC-jDz"/>
                        <outlet property="deleteButton" destination="IP4-EQ-EqH" id="KbH-yh-DQY"/>
                        <outlet property="tableView" destination="kNf-tQ-Z8O" id="EHX-4m-Qlx"/>
                        <outlet property="textField" destination="Ptz-od-oZT" id="j9r-LJ-1f0"/>
                        <outlet property="titleField" destination="y1x-Ys-0sh" id="bTP-8a-1DL"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="24" y="373"/>
        </scene>
    </scenes>
</document>
