...
    [self.textField resignFirstResponder];
}

#pragma mark - 清空任务操作，采用了UIAlertController，点击按钮后弹框
- (IBAction)clearTasks:(UIBarButtonItem *)sender {
    // 新建一个UIAlertController并显示
    UIAlertController *alertController = [UIAlertController alertControllerWithTitle:@"Delete all tasks or not" message:nil preferredStyle:UIAlertControllerStyleAlert];
    [self presentViewController:alertController animated:YES completion:^{
        
    }];
    // 新建两个UIAlertAction按钮并处理相应的事件
    UIAlertAction *Ok = [UIAlertAction actionWithTitle:@"OK" style:UIAlertActionStyleDestructive handler:^(UIAlertAction * _Nonnull action) {
        [self.tasks removeAllObjects];
        
        [self.tableView reloadData];
    }];
    UIAlertAction *cancel = [UIAlertAction actionWithTitle:@"Cancel" style:UIAlertActionStyleCancel handler:^(UIAlertAction * _Nonnull action) {
        
...
