...
    // Do any additional setup after loading the view, typically from a nib.
    
    // 初始化两个可变数组
    self.tasks = [NSMutableArray array];
    _deleteTasks = [NSMutableArray array];
    
    self.textField.placeholder = @"enter your task here";
    
    // 添加数据源为控制器本身，注意要满足UITableViewDataSource才能成为数据源
    self.tableView.dataSource = self;
}

#pragma mark 给tableView里面添加tasks
...
